--- a/css/style.css
+++ b/css/style.css
@@ -1035,3 +1035,25 @@ fieldset {
 .hidden {
   display: none;
 }
+
+.pristine-error {
+  color: #ff5635;
+  width: 200%;
+}
+
+.ad-form__element--capacity .pristine-error,
+.ad-form__element--price .pristine-error {
+  margin-left: -100%;
+}
+
+.alert-container {
+  margin: 0;
+  text-align: center;
+  color: #ff5635;
+  font-size: x-large;
+}
+
+.ad-form__submit--disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
